# spyglass

./: .dockerignore  .env.example  .environment.yml.swp  .gitattributes  .gitignore  .mailmap  .markdownlint.yaml  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  TODO  TODO.md  config_schema.yml  dj_local_conf_example.json  dj_local_conf_template.json  docker-compose.yml  environment-min.yml  environment.yml  environment.yml.bakup  environment_dlc.yml  environment_min.yml  environment_moseq_cpu.yml  environment_moseq_gpu.yml  environment_position.yml  environment_position2.yml  environment_test.yml  example.env  franklab_kachery-p2p_config.yaml  mysql_config  nohup.out  nwb_datajoint.code-workspace  pyproject.toml  requirements-dev.txt  (+8 more)
.claude/audits/: COMBINED_SYNTHESIS.md  spikesorting-v2-parity-audit.json  spikesorting-v2-sorting-parity.json
.claude/docs/: lessons-learned-new-pipeline.md
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/: codecov.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codespell.yml  documentation.yml  lint.yml  linting.yml  main.yml  nightly.yml  publish-docs.yml  publish.yml  test-conda.yml  test-package-build.yml  workflow.yml
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4.1/: 404.html  index.html  objects.inv  sitemap.xml
0.4.1/CHANGELOG/: index.html
0.4.1/LICENSE/: index.html
0.4.1/contribute/: index.html
0.4.1/installation/: index.html
0.4.1/search/: search_index.json
0.4/CHANGELOG/: index.html
0.4/LICENSE/: index.html
0.4/api/: index.html
0.4/contribute/: index.html
0.5/: 404.html  index.html  objects.inv  sitemap.xml
[version]/: 404.html  index.html  sitemap.xml
config/: add_dj_collaborator.py  add_dj_guest.py  add_dj_module.py  add_dj_user.py  datajoint_user_config.yml  dj_config.py  weekly_cleanup.py
devel/: build_and_push_docker.sh  garbage_collection.py  start_datajoint_test_server.sh  test.sh  test_in_docker.sh
docs/: DATABASE.md  README.md  TROUBLESHOOTING.md  build-docs.sh  config_yaml.md  developer_notes.md  figurl_views.md  generate_ingestion_table.py  index.html  interface.md  link-docs.sh  mkdocs.yml  schema.md  session_groups.md  spellcheck_words.txt
environments/: environment.yml  environment_dlc.yml  environment_min.yml  environment_moseq_cpu.yml  environment_moseq_gpu.yml  environment_position.yml  environment_sleap.yml  environment_spikesorting_legacy.yml  environment_spikesorting_v2.yml
example_scripts/: createprobes.py  get_snippets.py  sorttest.py
examples/: db_alter.ipynb  parallel_spikesorting_tutorial.ipynb
franklab_scripts/: NP1_standard_config.json  README.md  add_dj_user.py  alter_tables.py  cleanup.py  create_probes.py  franklab_dj_initial_setup.py  franklab_dj_setup.py  franklab_dj_stores_setup.py  nightly_cleanup.py  run_jobs.sh  sort.py
ingest/: ingest_nwb.py
kyu/: kyu_Example_populate_from_nwb.ipynb  kyu_installlation_notes.txt  kyu_nwbdj_spikeinterface.ipynb
maintenance_scripts/: README.md  alter_tables.py  check_disk_space.sh  cleanup.py  drop_pipeline.py  email_utils.sh  example.env  populate.py  predict_runway.py  run_jobs.sh  script_utils.sh  slack_utils.sh
mas/: 404.html  index.html  objects.inv  sitemap.xml
notebooks/: .gitignore  .sort_test.py.swp  00_Database_Connection.ipynb  00_Setup.ipynb  00_intro.ipynb  01_Concepts.ipynb  01_Insert_Data.ipynb  01_spikesorting.ipynb  02_Data_Sync.ipynb  02_Insert_Data.ipynb  02_Spike_Sorting.ipynb  02_curation.ipynb  03_Data_Sync.ipynb  03_Merge_Tables.ipynb  03_lfp.ipynb  04_Merge_Tables.ipynb  04_PopulateConfigFile.ipynb  04_Trodes_position.ipynb  05_DLC.ipynb  05_DLC_from_scratch.ipynb  05_Export.ipynb  05_Position_Trodes.ipynb  06_DLC_Loop.ipynb  06_DLC_from_dir.ipynb  08_Extract_Mark_indicators.ipynb  09_Decoding_with_GPUs_on_the_GPU_cluster.ipynb  0_intro.ipynb  0_intro_DPG.ipynb  0_intro_RL_test.ipynb  0_intro_dandiset53.ipynb  10_Spike_SortingV0.ipynb  10_Spike_SortingV1.ipynb  10_Spike_SortingV2.ipynb  10_Spike_SortingV2_CrossSession.ipynb  10_Spike_SortingV2_Curation.ipynb  10_Spike_SortingV2_Presets.ipynb  10_Spike_SortingV2_dev_walkthrough.ipynb  11_2D_Clusterless_Decoding.ipynb  11_Curation.ipynb  11_CurationV0.ipynb  (+106 more)
nwb_datajoint/: .__init__.py.swp  Untitled.ipynb  __init__.py  common_behav.py  common_device.py  common_dio.py  common_ephys.py  common_filter.py  common_interval.py  common_lab.py  common_nwbfile.py  common_sensors.py  common_session.py  common_subject.py  common_task.py  dj_helper_fn.py  insert_session.py  insert_sessions.py  nwb_dj.py  nwb_helper_fn.py  storage_dirs.py
pipeline/: experiment.py
pipeline__needs_attention/: experiment.py  ingest_nwb.py
query__needs_attention/: nwb_query.py  query_helpers.py
ref/: 404.html  index.html  objects.inv  sitemap.xml
schema/: __init__.py  common_behav.py  common_device.py  common_dio.py  common_ephys.py  common_filter.py  common_interval.py  common_lab.py  common_region.py  common_sensors.py  common_session.py  common_subject.py  common_task.py  createprobes.py  dj_helper_fn.py  nwb_dj.py  nwb_helper_fn.py  runPopulate.py
scripts/: ARCHITECTURE.md  README.md  RICH_COMPARISON.md  common.py  demo_rich.py  install.py  quickstart.py  quickstart.sh  quickstart_rich.py  quickstart_walkthrough.md  run_tests.py  setup_franklab.sh  test_core_functions.py  test_error_handling.py  test_property_based.py  test_quickstart.py  test_quickstart_unittest.py.bak  test_system_components.py  test_validation_functions.py  validate.py  validate_spyglass.py  validate_spyglass_rich.py  validate_spyglass_walkthrough.md
tests/: .coveragerc  README.md  _temporarydirectory.py  base_dir_safety.py  ci_config.py  conftest.py  container.py  data_downloader.py  old_tests.py  sub-CuffLinks_ses-CuffLinks-LT03-g3_behavior+ecephys_spyglass_config.yaml  test_1.py  test_conftest_base_dir_safety.py  test_insert_beans.py  test_kachery_optional.py  test_nwb_helper_fn.py  trim_beans.py
(+2647 files in other folders)
