[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "spyglass-neuro"
description = "Neuroscience data analysis framework for reproducible research"
readme = "README.md"
requires-python = ">=3.9,<3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Loren Frank", email = "loren.frank@ucsf.edu" },
    { name = "Kyu Hyun Lee", email = "kyuhyun.lee@ucsf.edu" },
    { name = "Eric Denovellis", email = "eric.denovellis@ucsf.edu" },
    { name = "Ryan Ly", email = "rly@lbl.gov" },
    { name = "Daniel Gramling", email = "daniel.gramling@ucsf.edu" },
    { name = "Chris Brozdowski", email = "chris.broz@ucsf.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "neuroscience",
    "research",
    "electrophysiology",
    "reproducible",
    "data analysis",
    "spike sorting",
    "spikeinterface",
    "datajoint",
    "nwb",
    "kachery",
    "sortingview",
]
dependencies = [
    "pydotplus",
    "dask",
    "position_tools",
    "track_linearization>=2.3",
    "non_local_detector",
    "ripple_detection",
    "matplotlib",
    "seaborn",
    "bottleneck",
    "numpy<1.24",
    "ipympl",
    "tqdm",
    "pubnub<6.4.0",                 # TODO: remove this when sortingview is updated
    "pynwb>=2.2.0,<3",
    "hdmf>=3.4.6",
    "datajoint>=0.13.6",
    "pymysql",
    "sortingview>=0.11",
    "pyyaml",
    "click",
    "spikeinterface>=0.98.2,<0.99",
    "ndx_franklab_novela>=0.1.0",
]
dynamic = ["version"]

[project.scripts]
spyglass_cli = "spyglass.cli:cli"

[project.urls]
"Homepage" = "https://github.com/LorenFrankLab/spyglass"
"Bug Tracker" = "https://github.com/LorenFrankLab/spyglass/issues"

[project.optional-dependencies]
position = ["ffmpeg", "numba>=0.54", "deeplabcut<2.3.0"]
test = [
    "docker",         # for tests in a container
    "pytest",         # unit testing
    "pytest-cov",     # code coverage
    "kachery",        # database access
    "kachery-client",
    "kachery-cloud",
]
docs = [
    "hatch",                 # Get version from env
    "mike",                  # Docs versioning
    "mkdocs",                # Docs core
    "mkdocs-exclude",        # Docs exclude files
    "mkdocs-exclude-search", # Docs exclude files in search
    "mkdocs-gen-files",      # Docs API generator
    "mkdocs-jupyter",        # Docs render notebooks
    "mkdocs-literate-nav",   # Dynamic page list for API docs
    "mkdocs-material",       # Docs theme
    "mkdocstrings[python]",  # Docs API docstrings
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
# this file is created/updated when the package is installed and used in
# src/spyglass/__init__.py to set `spyglass.__version__`
version-file = "src/spyglass/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src/spyglass"]
exclude = []

[tool.black]
line-length = 80

[tool.codespell]
skip = '.git,*.pdf,*.svg,*.ipynb,./docs/site/**,temp*'
ignore-words-list = 'nevers'
# Nevers - name in Citation

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
  "-sv",
  "-p no:warnings",
  # "--no-teardown", # don't teardown the database after tests
  # "--quiet-spy", # don't show logging from spyglass
  "--show-capture=no",
  "--pdbcls=IPython.terminal.debugger:TerminalPdb", # use ipython debugger
  "--cov=spyglass",
  "--cov-report=term-missing",
  "--no-cov-on-fail",
]
testpaths = ["tests"]
log_level = "INFO"

[tool.coverage.run]
source = ["*/src/spyglass/*"]
omit = [ # which submodules have no tests
  "*/__init__.py",
  "*/_version.py",
  "*/cli/*",
  # "*/common/*",
  "*/data_import/*",
  "*/decoding/*",
  "*/figurl_views/*",
  # "*/lfp/*",
  "*/linearization/*",
  "*/lock/*",
  "*/position/*",
  "*/ripple/*",
  "*/sharing/*",
  "*/spikesorting/*",
  # "*/utils/*",
]
