[metadata]
name = nwb_datajoint
version = 0.2.6
author = Loren Frank, Eric Denovellis, Kyu Hyun Lee, Ryan Ly
author_email = loren@phy.ucsf.edu
description = Neuroscience data pipeline for reproducible research used by Loren Frank Lab, UCSF
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/LorenFrankLab/nwb_datajoint
project_urls =
    Bug Tracker = https://github.com/LorenFrankLab/nwb_datajoint/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[flake8]
max-line-length = 120
max-complexity = 17
exclude =
  .git,
  .tox,
  __pycache__
per-file-ignores =
  notebooks/*.py:E402
  nwb_datajoint/common/__init__.py:F401
  nwb_datajoint/data_import/__init__.py:F401
  nwb_datajoint/lock/__init__.py:F401
  nwb_datajoint/__init__.py:F401,E402
