[metadata]
name = spyglass
version = 0.3.1
author = Loren Frank, Kyu Hyun Lee, Eric Denovellis, Ryan Ly
author_email = loren@phy.ucsf.edu
description = Neuroscience data pipeline for reproducible research by Loren Frank Lab, UCSF
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/LorenFrankLab/spyglass
project_urls =
    Bug Tracker = https://github.com/LorenFrankLab/spyglass/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
scripts =
    bin/spyglass

[options.packages.find]
where = src

[flake8]
max-line-length = 120
max-complexity = 17
exclude =
  .git,
  .tox,
  __pycache__
per-file-ignores =
  notebooks/*.py:E402
  src/spyglass/common/__init__.py:F401
  src/spyglass/data_import/__init__.py:F401
  src/spyglass/lock/__init__.py:F401
  src/spyglass/__init__.py:F401,E402
  src/spyglass/*.py:T001
